--- a/bundles/gw4e-eclipse-plugin/src/org/gw4e/eclipse/message/messages.properties
+++ b/bundles/gw4e-eclipse-plugin/src/org/gw4e/eclipse/message/messages.properties
@@ -109,7 +109,7 @@ convertToOptions=Options
 generationOptions=Which hooks should I generate ? 
 generationGraphWalkerTestOptions=What kind of GraphWalker tests should I generate ? 
 generationPoliciesGroup=Generation Policies
-generationInformationText=Notice that a test file is generated, when the test does not exist or if the selected graph file has been updated since the last generation.\nIf you don't want to use these policies in order to enforce the generation, uncheck the button below.\nExisting test file will be renamed.
+generationInformationText=Notice that a test file is generated, when the test does not exist or if the selected graph file has been updated since the last generation.\nIf you don't want to use these policies in order to force the generation, uncheck the button below.\nExisting test file will be renamed.
 generationJunitTestOptions=What kind of Apache JUnit tests should I generate ? 
 what_are_the_additional_graph_file_to_add= What are the additional graph files I need to add to the tests context?
 toWhichGroupDoThisBelongTo=You can optionally assign one or more groups to this test (Comma separated values)
