Add graphml filter on conversion page

--- a/bundles/gw4e-eclipse-plugin/src/org/gw4e/eclipse/message/messages.properties
+++ b/bundles/gw4e-eclipse-plugin/src/org/gw4e/eclipse/message/messages.properties
@@ -249,6 +249,7 @@ set_offline_timeout_explanation=While the Offline tool runs, it walks thru the s
 set_offline_timeout=Set an Offline Run Timeout (in sec.)
 hooksourcecode=Extended Source for Tests Generation:
 hint=Hint
+filter_graphml_file=Filter out graphml
 reset=Reset
 unable_to_load_graph_file_see_error_view=Unable to load the graph model. See error logs in the Error View.
 performance_view_configuration=GW4E needs a '.options' file (in the Eclipse launched directory. The one which contains eclipse(.exe)).Then run Eclipse in debug mode in order to view performances. Click 'OK' in order to create this file, 'Close' otherwise. Any existing .options file will be renamed. Once configured, run 'eclipse -debug' at a shell prompt, then run a project build. Click again this button to view performance build results.
