adding static test generation wizard - part 1

--- a/bundles/gw4e-eclipse-plugin/src/org/gw4e/eclipse/message/messages.properties
+++ b/bundles/gw4e-eclipse-plugin/src/org/gw4e/eclipse/message/messages.properties
@@ -27,6 +27,7 @@
 ###
 graphwalkerName=GraphWalker
 Create_Converted_File=Create Converted File
+Generate_File=Generate File
 generate_a_graphwalker_annotated_test=Generate a GraphWalker Annotated Test
 generate_a_graphwalker_offline_test=Generate a GraphWalker Offline Test
 resource_already_exists=Resource already exists
@@ -91,8 +92,10 @@ cannotrenamefile=Cannot rename file :
 elapsedTime=Exec. Time;		
 project_does_not_exist=Project does not exist
 Create_a_new_converted_file_resource=Create a new converted file resource.
+Create_a_new_generated_file_resource=Create a new generated file resource.
 choose_the_generation_option=Choose the generation options
 GraphWalker_Conversion_File=GW4E Conversion File
+GraphWalker_Generator_File=GW4E Generator File
 graphfiles=Graph File(s)
 resetperformancestatistics=Reset Performance Statistics
 resetstats=Reset Stats.
@@ -136,6 +139,7 @@ reuse_extending_test=Generate in an extension test
 convertEraseExistingFile=Erase existing file
 convertto_extension_java=Java Model Based 
 convertto_extension_offlinejava=Java Offline Test Based 
+generateto_extension_api_based=Java Api Based Test Based 
 convertto_extension_testjava=Java Test Based
 convertto_extension_json=Json
 convertto_extension_dot=Dot
