Refactor wizard the static Generator Creation Wizard

--- a/bundles/gw4e-eclipse-plugin/src/org/gw4e/eclipse/message/messages.properties
+++ b/bundles/gw4e-eclipse-plugin/src/org/gw4e/eclipse/message/messages.properties
@@ -28,6 +28,7 @@
 graphwalkerName=GraphWalker
 Create_Converted_File=Create Converted File
 Generate_File=Generate File
+move_elements_from_left_to_right_to_select_them=Review the selected graph elements end their order.\nUse "Add" or "Remove" buttons to manage your selection.\nUse "Up" or "Down" buttons to manage the elements order.
 generate_a_graphwalker_annotated_test=Generate a GraphWalker Annotated Test
 generate_a_graphwalker_offline_test=Generate a GraphWalker Offline Test
 resource_already_exists=Resource already exists
