Update wizard static Generator Creation Wizard

--- a/bundles/gw4e-eclipse-plugin/src/org/gw4e/eclipse/message/messages.properties
+++ b/bundles/gw4e-eclipse-plugin/src/org/gw4e/eclipse/message/messages.properties
@@ -28,7 +28,10 @@
 graphwalkerName=GraphWalker
 Create_Converted_File=Create Converted File
 Generate_File=Generate File
+you_must_select_an_execution_context_class=Ypu must select an execution context class
 move_elements_from_left_to_right_to_select_them=Review the selected graph elements end their order.\nUse "Add" or "Remove" buttons to manage your selection.\nUse "Up" or "Down" buttons to manage the elements order.
+execution_context_choice=Execution context choice
+choose_the_execution_context_you_want_to_extend=Choose the execution context you want to extend.
 generate_a_graphwalker_annotated_test=Generate a GraphWalker Annotated Test
 generate_a_graphwalker_offline_test=Generate a GraphWalker Offline Test
 resource_already_exists=Resource already exists
@@ -148,6 +151,7 @@ Open_file_for_editing_when_done=Open file editor when done
 Dont_set_extension_To_File_Name=Don't set extension to file name	
 convertto_fileAlreadyExists=File already exists
 convertto_invalidfolder_you_can_only_choose=Invalid folder. You can only choose folder :
+convertto_invalidfolder_you_can_only_choose_format=Invalid folder. You can only choose a folder below : {0} or {1}
 convertto_invalidfolder=Invalid folder.
 convertto_enforced_folder=Selection disabled. Target folder & file names are enforced. Existing resources are managed by a local cache.
 File_name=File name
@@ -201,6 +205,7 @@ runGW3RadioButtonLabel=Run a GW3 Conversion
 enter_gw3_file=Enter an existing gw3 file path
 addtherequiredbuildpoliciesfile=Add the required build policies file
 error=ERROR
+an_error_has_occured_while_generating_test=An error has occured while generating test
 mvn_group_id=Maven Group Id: 
 mvn_version_id=Maven Version Id: 
 mvn_artifact_id=Maven Artifact Id: 
