add tests for Wizard

--- a/bundles/gw4e-eclipse-plugin/src/org/gw4e/eclipse/message/messages.properties
+++ b/bundles/gw4e-eclipse-plugin/src/org/gw4e/eclipse/message/messages.properties
@@ -28,8 +28,8 @@
 graphwalkerName=GraphWalker
 Create_Converted_File=Create Converted File
 Generate_File=Generate File
-you_must_select_an_execution_context_class=Ypu must select an execution context class
-move_elements_from_left_to_right_to_select_them=Review the selected graph elements end their order.\nUse "Add" or "Remove" buttons to manage your selection.\nUse "Up" or "Down" buttons to manage the elements order.
+you_must_select_an_execution_context_class=You must select an execution context class
+move_elements_from_left_to_right_to_select_them=Review the selected graph elements and their order.\nUse "Add" or "Remove" buttons to manage your selection.\nUse "Up" or "Down" buttons to manage the elements order.
 execution_context_choice=Execution context choice
 choose_the_execution_context_you_want_to_extend=Choose the execution context you want to extend.
 generate_a_graphwalker_annotated_test=Generate a GraphWalker Annotated Test
