Open JUnit view once a GraphWalker test has been completed

--- a/bundles/gw4e-eclipse-plugin/src/org/gw4e/eclipse/message/messages.properties
+++ b/bundles/gw4e-eclipse-plugin/src/org/gw4e/eclipse/message/messages.properties
@@ -227,6 +227,7 @@ buildpoliciefilename=Build Policies File Name:
 suffixfortestimplementation=Test Impl. Suffix:
 suffixforofflinetestimplementation=Test Offline Impl. Suffix:
 timeoutforofflinetestgeneration=Test Offline Timeout Generation :
+waittimeoutforgraphwalkertestexecution=Wait GraphWalker Test Execution Timeout :
 targetmainfolderfortestinterface=Target 'Main' Folder for Test Interfaces:
 targettestfolderfortestinterface=Target 'Test' Folder for Test Interfaces:
 defaultseverity=Default Severity (I,W,E) :
