manage filtering blocked elements

--- a/bundles/gw4e-eclipse-plugin/src/org/gw4e/eclipse/message/messages.properties
+++ b/bundles/gw4e-eclipse-plugin/src/org/gw4e/eclipse/message/messages.properties
@@ -254,6 +254,7 @@ deselectAll=Deselect all
 selectAll=Select all
 tests=Test(s):
 mainTestExecutionContext=Main Test Exec. Context:
+removeBlockedElement=Remove Blocked Element(s):
 additionalExecutionContext=Additional Execution Context:
 choose_one_or_more_path_generator=Choose one or more generators
 set_offline_timeout_explanation=While the Offline tool runs, it walks thru the selected graph and this process might take a while depending on the graph size \nand the chosen generator and stop condition. You can set a time out in order to limit the time spent on walking.\nIf a timeout occurs, an exception will be raised.  
