add manual test

--- a/bundles/gw4e-eclipse-plugin/src/org/gw4e/eclipse/message/messages.properties
+++ b/bundles/gw4e-eclipse-plugin/src/org/gw4e/eclipse/message/messages.properties
@@ -38,6 +38,7 @@ resource_already_exists=Resource already exists
 folder_does_not_exists=Folder does not exist
 select_a_folder=Select a folder...
 append_method_in_existing_test=Generate code in a new test class
+summary_of_manual_test=Summary of manual test
 filename_is_empty=File name is empty
 update_conflict=Update Conflict
 missing_maven_group_id=Missing Project Group Id
@@ -100,6 +101,7 @@ Create_a_new_generated_file_resource=Create a new generated file resource.
 choose_the_generation_option=Choose the generation options
 GraphWalker_Conversion_File=GW4E Conversion File
 GraphWalker_Generator_File=GW4E Generator File
+Run_As_Manual=Run As Manual
 graphfiles=Graph File(s)
 resetperformancestatistics=Reset Performance Statistics
 resetstats=Reset Stats.
@@ -183,6 +185,7 @@ model_browse=Browse...
 refresh=Refresh
 error_modelNamenotdefined=Graph Model not defined
 error_graphmodel_not_found=Graph Model not found
+start_element_not_found=Start element not found in Graph Model 
 error_file_not_found_in_project=File does not belong to the selected project
 label_generator=Generator and Stop Conditions
 enter_generator=If you did not select it above, enter a generator and stop conditions: GENERATOR(STOP_CONDITIONS)
@@ -256,6 +259,7 @@ tests=Test(s):
 mainTestExecutionContext=Main Test Exec. Context:
 removeBlockedElement=Remove Blocked Element(s):
 additionalExecutionContext=Additional Execution Context:
+additionalGraphModels=Additional Graph Model(s):
 choose_one_or_more_path_generator=Choose one or more generators
 set_offline_timeout_explanation=While the Offline tool runs, it walks thru the selected graph and this process might take a while depending on the graph size \nand the chosen generator and stop condition. You can set a time out in order to limit the time spent on walking.\nIf a timeout occurs, an exception will be raised.  
 set_offline_timeout=Set an Offline Run Timeout (in sec.)
@@ -270,7 +274,13 @@ performance_view_configuration_title=Performance View Configuration
 conversion=Conversion
 filexistsoverwrite=It appears that the file exists. Would you like to overwrite it ? 'No' will prevent to save the file. 
 not_formatted_as_json_convert_it=This file will be displayed in read only mode as it appears not to be formatted in 'json'. You can use the 'GraphWalker -> Convert to...' wizard for conversion. 
- 
+your_test_will_be_based_on_the_following=Your test will be based on the following : 
+main_model=Main model : 
+additional_models=Additional model(s) : 
+generator_stop_condition=Generator/Stop Condition : 
+start_element=Start Element : 
+remove_Blocked_Element=Remove Blocaked Element : 
+
 
 
 
