--- a/bundles/gw4e-eclipse-plugin/src/org/gw4e/eclipse/message/messages.properties
+++ b/bundles/gw4e-eclipse-plugin/src/org/gw4e/eclipse/message/messages.properties
@@ -26,6 +26,9 @@
 # #L%
 ###
 graphwalkerName=GraphWalker
+description=Description
+result=Result
+failed=Failed
 Create_Converted_File=Create Converted File
 Generate_File=Generate File
 you_must_select_an_execution_context_class=You must select an execution context class
