update manual wizard

--- a/bundles/gw4e-eclipse-plugin/src/org/gw4e/eclipse/message/messages.properties
+++ b/bundles/gw4e-eclipse-plugin/src/org/gw4e/eclipse/message/messages.properties
@@ -26,10 +26,27 @@
 # #L%
 ###
 graphwalkerName=GraphWalker
+set_status_to=Set Status to...
+set_status_to_success=Success
+set_status_to_notperformed=Not Performed
+set_status_to_failed=Failed
 description=Description
+update_results=Update Results
+enter_failure_reason=Enter a failure reason (Optional)
+enter_notperformed_reason=Enter why not performed (Optional)
+enter_result=Enter a result (Optional)
 result=Result
-failed=Failed
+failed=Step Failed
+action=Action : 
+verification=Verification : 
+status=Status
+skip_to_summary=Next will skip to summary page
+summaryExecutionPage=Summary Execution Page
+enter_a_result_if_verification_failed=Enter a result, if verification failed
 step=Step
+steps=Steps
+results=Results
+description=Description
 Create_Converted_File=Create Converted File
 Generate_File=Generate File
 you_must_select_an_execution_context_class=You must select an execution context class
@@ -283,7 +300,7 @@ main_model=Main model :
 additional_models=Additional model(s) : 
 generator_stop_condition=Generator/Stop Condition : 
 start_element=Start Element : 
-remove_Blocked_Element=Remove Blocaked Element : 
+remove_Blocked_Element=Remove Blocked Element : 
 
 
 
