add new offline parameters and for manual run

--- a/bundles/gw4e-eclipse-plugin/src/org/gw4e/eclipse/message/messages.properties
+++ b/bundles/gw4e-eclipse-plugin/src/org/gw4e/eclipse/message/messages.properties
@@ -32,6 +32,8 @@ set_status_to_notperformed=Not Performed
 set_status_to_failed=Failed
 description=Description
 update_results=Update Results
+empty_path_generator=Empty path generator.
+invalid_path_generator=Invalid path generator.
 enter_failure_reason=Enter a failure reason (Optional)
 enter_notperformed_reason=Enter why not performed (Optional)
 enter_result=Enter a result (Optional)
@@ -42,6 +44,7 @@ verification=Verification :
 status=Status
 skip_to_summary=Next will skip to summary page
 summaryExecutionPage=Summary Execution Page
+summaryMessageExecutionPage=If needed, you can use the table menu to refine statuses and buttons to update results
 enter_a_result_if_verification_failed=Enter a result, if verification failed
 step=Step
 steps=Steps
@@ -192,6 +195,7 @@ runOfflineLabel=Run Offline
 projectdialog_title=GW4E projects
 projectdialog_message=Select a project
 methoddialog_title=GraphWalker model file (.graphml,.json)
+path_generator_header_title=Path Generator (Click a cell to display available values)
 methoddialog_message=Select a file
 label_project=Project
 label_project1=Project:
@@ -201,6 +205,7 @@ GW3=GW3
 GraphModel=Graph Model
 EnterStartElement=You must set a start element name 
 select_a_path_generatpr=Select a path generator
+path_generator=Path generator
 select_a_test_type=You must select at least one test type 
 model_browse=Browse...
 refresh=Refresh
@@ -279,8 +284,10 @@ selectAll=Select all
 tests=Test(s):
 mainTestExecutionContext=Main Test Exec. Context:
 removeBlockedElement=Remove Blocked Element(s):
+omitEdgeElementwithoutDescription=Omit Edge(s) Without Description
 additionalExecutionContext=Additional Execution Context:
-additionalGraphModels=Additional Graph Model(s):
+additionalGraphModel=Additional Graph Model(s) Context:
+additionalGraphModels=Additional Graph Model(s)
 choose_one_or_more_path_generator=Choose one or more generators
 set_offline_timeout_explanation=While the Offline tool runs, it walks thru the selected graph and this process might take a while depending on the graph size \nand the chosen generator and stop condition. You can set a time out in order to limit the time spent on walking.\nIf a timeout occurs, an exception will be raised.  
 set_offline_timeout=Set an Offline Run Timeout (in sec.)
