add max step page preference project page for manual wizard

--- a/bundles/gw4e-eclipse-plugin/src/org/gw4e/eclipse/message/messages.properties
+++ b/bundles/gw4e-eclipse-plugin/src/org/gw4e/eclipse/message/messages.properties
@@ -44,9 +44,12 @@ verification=Verification :
 status=Status
 skip_to_summary=Next will skip to summary page
 summaryExecutionPage=Summary Execution Page
+max_steps_for_manual_steps_wizard=Max Steps Count For Manual Test Wizard
 summaryMessageExecutionPage=If needed, you can use the table menu to refine statuses and buttons to update results
 enter_a_result_if_verification_failed=Enter a result, if verification failed
 step=Step
+incomplete_steps_list_in_manual_wizard=Incomplete Steps List In Generated Wizard
+max_steps_reached_change_setting_in_preference_project=The wizard generation has reached the maximum number of steps authorized.\nYour wizard will be incomplete.\nCancel the upcoming wizard dialog, change this threshold value in the GW4E project preference, and re-run the wizard.  
 steps=Steps
 results=Results
 description=Description
@@ -110,6 +113,7 @@ project=Project
 update_severity_to=Update the severity to :
 invalid_severity=Invalid severity
 invalid_timeout=Invalid timeout
+invalid_number_value=Invalid. Not a number
 when=When
 change_generator_to=Change the path generator to : 
 context=Context 
