add spreadsheet generation for manual test

--- a/bundles/gw4e-eclipse-plugin/src/org/gw4e/eclipse/message/messages.properties
+++ b/bundles/gw4e-eclipse-plugin/src/org/gw4e/eclipse/message/messages.properties
@@ -44,6 +44,29 @@ verification=Verification :
 status=Status
 skip_to_summary=Next will skip to summary page
 summaryExecutionPage=Summary Execution Page
+manual_export_as_test=Export as a test result
+manual_export_as_template=Export as a test template
+manual_export_update_item_if_exists=Update mode if the testcaseid exists (Rather than inserting a new item in the workbook)
+manual_export_select_a_workbook=Select or enter a workbook file name
+manual_export_enter_a_testcaseid=Enter a test case id
+manual_export_e_a_workbook=Select an existing workbook
+manual_export_enter_workbooktitle=Enter a workbook title (used at creation time)
+manual_export_invalidfilename=Invalid filename
+manual_export_invaliddateformat=Invalid date format
+manual_export_invaliddtestcaseid=Invalid test case id
+manual_export_invalid_component=Invalid component name
+manual_export_an_error_has_occured_while_generating_spreadsheet=An error has occured while generating the spreadsheet
+manual_export_invalid_priority=Invalid priority
+manual_export_enter_a_component=Enter a component name
+manual_export_invalid_workbook_title=Invalid workbook title
+manual_export_high=High
+manual_export_medium=Medium
+manual_export_low=Low
+manual_export_choice=Export Choice
+manual_export_enter_a_priority=Select a test case priority
+manual_export_enter_a_workbook_name_toolitp=Enter a file name with a '.xlsx' extension  for the workbook that will be created
+manual_export_select_a_workbook_name_toolitp=Select a workbook file name that will be updated
+manual_export_enter_date_format=Enter a date format for the Date spreadsheet column
 max_steps_for_manual_steps_wizard=Max Steps Count For Manual Test Wizard
 summaryMessageExecutionPage=If needed, you can use the table menu to refine statuses and buttons to update results
 enter_a_result_if_verification_failed=Enter a result, if verification failed
@@ -53,6 +76,7 @@ max_steps_reached_change_setting_in_preference_project=The wizard generation has
 steps=Steps
 results=Results
 description=Description
+manual_export_explanation=You can export in a spreadsheet, this test execution as a test result or a test template.
 Create_Converted_File=Create Converted File
 Generate_File=Generate File
 you_must_select_an_execution_context_class=You must select an execution context class
@@ -312,6 +336,17 @@ additional_models=Additional model(s) :
 generator_stop_condition=Generator/Stop Condition : 
 start_element=Start Element : 
 remove_Blocked_Element=Remove Blocked Element : 
+xl_TestCaseId=Test Case Id
+xl_Component=Component	
+xl_Priority=Priority	
+xl_Description=Description
+xl_Pre_requisites=Pre Requisites
+xl_Test_Steps=Test Steps	
+xl_Expected_Result=Action / Expected Result
+xl_Actual_Result=Actual Result
+xl_Status=Status
+xl_Summary=Summary
+xl_Date=Date
 
 
 
