add report detail parameter to the launcher

--- a/bundles/gw4e-eclipse-plugin/src/org/gw4e/eclipse/message/messages.properties
+++ b/bundles/gw4e-eclipse-plugin/src/org/gw4e/eclipse/message/messages.properties
@@ -312,6 +312,7 @@ selectAll=Select all
 tests=Test(s):
 mainTestExecutionContext=Main Test Exec. Context:
 removeBlockedElement=Remove Blocked Element(s):
+displayReport=Display Report:
 omitEdgeElementwithoutDescription=Omit Edge(s) Without Description
 additionalExecutionContext=Additional Execution Context:
 additionalGraphModel=Additional Graph Model(s) Context:
