add search feature

--- a/bundles/gw4e-eclipse-plugin/src/org/gw4e/eclipse/message/messages.properties
+++ b/bundles/gw4e-eclipse-plugin/src/org/gw4e/eclipse/message/messages.properties
@@ -348,6 +348,24 @@ xl_Actual_Result=Actual Result
 xl_Status=Status
 xl_Summary=Summary
 xl_Date=Date
+scope=Scope
+workspace=Workspace
+projects=Project(s)
+search_criteria=Search Criteria
+add=Add
+remove=Remove
+model_property=Model Property
+search_operator=Operator
+search_value=Value
+requirement_property=Requirement
+enter_a_search_value=Enter a value...
+search_model_label=GW4E Search
+Property=Property
+Operator=Operator
+Value=Value
+
+
+
 
 
 
